--- a/Invaders/index.html
+++ b/Invaders/index.html
@@ -2,8 +2,10 @@
 <html>
 	<head>
 		<title>Invaders</title>
+		<meta charset="utf-8">
 	</head>
 	<body>
-        <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.js"></script><script type="text/javascript" src="main.js"></script>	
+        <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.js"></script>
+        <script type="text/javascript" src="main.js"></script>	
 	</body>
 </html>
