--- a/Arkanoid/index.html
+++ b/Arkanoid/index.html
@@ -8,17 +8,18 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.sound.js"></script>
         <script src="main.js"></script>
-        <link rel="stylesheet" href="style.css">
+        <<link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div class="menu" id="menu">
             <button onclick="empezar_juego()" id="boton" value="this"></button>
         </div>
+        <div class="botones" id="botones">
             <button class="pausa" onclick="pausar_juego()" id="pausa"></button>
-            <button class="musica" onclick="activar_sonido()" id="musica"></button> <br>
+            <button class="musica" onclick="activar_sonido()" id="musica"></button> 
+            <button class="reiniciar" onclick="reiniciar_juego()" id="reiniciar"></button>
+        </div> <br>
         <div id="contenedor">
-            <!--<audio src="https://archive.org/download/bouncemp3/Bounce_mp3.mp3" autoplay="false" crossOrigin="anonymous" id="sonido_bola" preload="auto"></audio>-->
-            <!--<audio src="https://archive.org/download/bonus_brick/bonus_brick.mp3" autoplay="false" crossOrigin="anonymous" id="sonido_bola" preload="auto"></audio>-->
         </div>
     </body>
 </html>
