Creando el juego

--- a/Rock Papers Scissors/index.html
+++ b/Rock Papers Scissors/index.html
@@ -14,10 +14,10 @@
 		</div>
 		<div class="marcador mt-2 mb-2 mx-auto">
 			<h1 class="float-left" value="0" id="puntaje_jugador"> Jugador: 0 </h1>
+			<h1 class="float-right mt-0" value="0" id="puntaje_computadora"> PC: 0 </h1> <br><br><br>
 			<div class="float-left ml-2 mt-2 eleccion" id="eleccion_jugador"></div>
-			<h1 class="float-right" value="0" id="puntaje_computadora"> PC: 0 </h1>
 			<div class="float-right mr-2 mt-2 eleccion" id="eleccion_computador"></div>
-			<h1 id="estado" class="mt-5 estado"> </h1>
+			<h1 class="estado" id="estado"> </h1>
 		</div>
 	</div>
 <body>
