--- a/Dinosaurio/index.html
+++ b/Dinosaurio/index.html
@@ -1,10 +1,35 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Dinousario</title>
-	</head>
-	<body>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.js"></script>
-		<script src="main.js"></script>
-	</body>
+    <head>
+        <title>Dinousario</title>
+        <link rel="stylesheet" href="https://fontlibrary.org/face/video-game-font" type="text/css"/>
+    </head>
+    <body>
+        <div class="menu" id="menu">
+            <h1> Jumping !</h1>
+            <button onclick="empezar_juego()" id="empezar" class="empezar menu-item" value="this"></button><br>
+            <!--<button class="configurar menu-item" onclick="configurar_juego()" id="configurar"></button>-->
+        </div>
+        <div class="botones" id="botones">
+            <button class="pausa" onclick="pantalla_pausa()" id="pausa"></button>
+            <button class="musica" onclick="activar_sonido()" id="musica"></button> 
+            <button class="terminar" onclick="terminar_juego()" id="terminar"></button>
+        </div> <br>
+        <div class="configuraciones" id="configuraciones">
+            <button class="terminar" onclick="terminar_juego()" id="terminar"></button>
+            <h3> Fondo </h3>
+            <div id="fondo_juego">
+                <ol>
+                    <li v-for="fondo in fondos">
+                        <button class="boton-fondo" v-bind:class="{ active: fondo.selected }" v-on:click="elegir(fondo,fondo.tipo)" v-bind:style="{ backgroundImage: 'url(' + fondo.valor + ')' }"></button>
+                    </li>
+                </ol>
+            </div>
+        </div>
+        <div id="contenedor">
+        </div> 
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.dom.min.js"></script>
+    </body>
 </html>
+
