--- a/Tic Tac Toe/index.html
+++ b/Tic Tac Toe/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html>
 	<head>
 		<title>Tic-Tac-Toe</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
 	    <h1 id="titulo"> Tic Tac Toe </h1>
@@ -25,13 +23,12 @@
 		    </label>
 		    <br>
 		    
-		    <button onclick="empezar_juego(); crear();" id="boton_empezar" class="mt-5"></button>
+		    <button onclick="empezar_juego();" id="boton_empezar" class="mt-5"></button>
 		</div>
 		
-		<div class="datos" id="datos"></div>
+		<div class="datos" id="datos"><h3 id="resultado" class="resultado"></h3></div>
 		<div id="tablero" class="tablero"></div>
 		
-		<script src="main.js"> </script>
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
