--- a/Invaders/index.html
+++ b/Invaders/index.html
@@ -5,7 +5,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.js"></script> 
         <link rel="stylesheet" href="https://fontlibrary.org/face/video-game-font" type="text/css"/>
         <link rel="stylesheet" type="text/css" href="style.css">
-        <script defer src="main.js"></script>
+        <script src="main.js"></script>
         <script src="https://unpkg.com/vue/dist/vue.js"></script>
         <script src="https://unpkg.com/vue-i18n/dist/vue-i18n.js"></script>
     </head>
@@ -24,6 +24,13 @@
         <div class="configuraciones" id="configuraciones">
             <button class="terminar" onclick="terminar_juego()" id="terminar"></button>
 
+            <h3 id="titulo_modo"> {{ $t("message.modo")}} </h3>
+            <div id="modo_juego">
+                <label> classic </label>
+                <input type="radio" class="modo_juego" value="classic" name="modo" checked>
+                <label> scroller </label>
+                <input type="radio" class="modo_juego" value="scroller" name="modo">
+            </div>
             <h3 id="titulo_fondo"> {{ $t("message.fondo") }} </h3>
             <div id="fondo_juego">
                 <ol>
@@ -45,7 +52,7 @@
                 <ol>
                     <li v-for="idioma in idiomas">
                         <button class="boton-fondo"
-                        v-bind:class="{ active: idioma.selected }" 
+                        v-bind:class="{active: idioma.selected }" 
                         v-on:click="elegir(idioma,idioma.valor)" 
                         v-bind:style="{ backgroundImage: 'url(' + idioma.url + ')' }"></button>
                     </li>
@@ -55,4 +62,4 @@
         <div id="contenedor"></div> 
         
     </body>
-</html>
+</html>                                                                                                                            
